Various fixes to macros and whatnot.

--- a/site/content/media/css/GGS.less
+++ b/site/content/media/css/GGS.less
@@ -370,6 +370,11 @@ h3 {
     font-style: italic;
 }
 
+.updated {
+    color: #AAAAAA;
+    font-size: .8em;
+}
+
 .summary {
     margin-top: .5em;
 }
