--- a/site/content/media/css/GGS.less
+++ b/site/content/media/css/GGS.less
@@ -133,14 +133,23 @@ input[type="radio"] {
 textarea {
 	overflow: auto;
 }
+
 table {
     border-collapse: collapse;
     border-spacing: 0;
 }
 
+th {
+    text-align: left;
+    padding-left: 1em;
+    padding-right: 1em;
+    
+}
+
 td { 
     vertical-align: top;
-    padding-left: 2em;
+    text-align: left;
+    padding: 1em;
 }
 
 #colophon {
