Updating table styles.

--- a/site/content/media/css/GGS.less
+++ b/site/content/media/css/GGS.less
@@ -141,15 +141,15 @@ table {
 
 th {
     text-align: left;
-    padding-left: 1em;
-    padding-right: 1em;
-    
+    padding: .5em .5em .5em 0
+    border-bottom: 1px solid black;
 }
+
 
 td { 
     vertical-align: top;
     text-align: left;
-    padding: 1em;
+    padding: 1em 1em 1em 0;
 }
 
 #colophon {
