--- a/site/content/media/css/GGS.less
+++ b/site/content/media/css/GGS.less
@@ -141,7 +141,7 @@ table {
 
 th {
     text-align: left;
-    padding: .5em .5em .5em 0
+    padding: .5em .5em .5em 0;
     border-bottom: 1px solid black;
 }
 
