--- a/site/content/media/css/GGS.less
+++ b/site/content/media/css/GGS.less
@@ -150,6 +150,7 @@ td {
     vertical-align: top;
     text-align: left;
     padding: 1em 1em 1em 0;
+    border-bottom: 1px solid #CCC;
 }
 
 #colophon {
