Adding Darwin's Orchid.

--- a/site/content/media/css/GGS.less
+++ b/site/content/media/css/GGS.less
@@ -261,6 +261,15 @@ blockquote {
    font-size: small; 
 }
 
+.larger { 
+    font-size: 1.2em;
+}
+
+.text-quote {
+    font-style: italic;
+    padding-left: 2em;
+}
+
 #commit-log {
     font-family: Menlo, Monaco, monospace;
     font-size: small;
