--- a/site/layout/base.j2
+++ b/site/layout/base.j2
@@ -16,10 +16,15 @@
 
                 
         <link rel="stylesheet" href="{{ media_url('css/GGS.css') }}">
+        <style>
+        {% block css %}
+
+        {% endblock %}
+        </style>
         <link href="feed.xml" type="application/atom+xml" rel="alternate" title="Sam Jacoby | Explorer | Feed">
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-         <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.0/jquery-ui.min.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.0/jquery-ui.min.js"></script>
         <script src="{{media_url('js/jquery.timeago.js')}}" type="text/javascript"></script>
         <script src="{{media_url('js/site.js')}}" type="text/javascript"></script>
         <script type="text/javascript" src="//use.typekit.net/emq4jse.js"></script>
@@ -62,5 +67,7 @@
         {% if site.config.mode == "production" -%}
             {% include "ga.j2" %}
         {%- endif %}
+        {% block tail_scripts %}
+        {% endblock %}
     </body>
 </html>
