Updating assorted media files.

--- a/site/content/media/css/GGS.less
+++ b/site/content/media/css/GGS.less
@@ -550,9 +550,17 @@ h1, h2 {
 	margin: (36/26*12em)/@em 0 (36/26*3em)/@em;
 }
 
+.source {
+    width: 940px;
+    text-align: right;
+    padding-right: 4em;
+}
+
 #message{
-  height: 2rem;    
-  font-family: monospaced;
+  padding-left: 1.5em;
+  font-family: monospace;
+  margin-top: -1.5em;
+  height: 4.5em;
   span {
     font-style: italic;
     }
