Adding code highlighting stuff.

--- a/site/layout/base.j2
+++ b/site/layout/base.j2
@@ -16,6 +16,7 @@
 
                 
         <link rel="stylesheet" href="{{ media_url('css/GGS.css') }}">
+        <link rel="stylesheet" href="{{ media_url('css/syntax.css') }}">
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/styles/default.min.css">
         <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/highlight.min.js"></script>
         <style>
